--- a/new.html
+++ b/new.html
@@ -17,11 +17,11 @@
           <br />
           On this Rose Day, each petal symbolizes my admiration <br />for you.
           Your presence colors my world with joy and warmth.Like a rose in full
-          bloom, your beauty captivates my heart. The Pink roses reflect the
-          Admiration for you, In the garden of life, you're my most cherished blossom.
+          bloom, your beauty captivates my heart. These Pink roses reflect my souls 
+          innocence for you, In the garden of life, you're my most cherished blossom.
           Our journey together is as sweet as the fragrance of roses. Happy Rose Day, 
-          my Simran. I wish you were here with me but what can we do time is not with us
-          but my invincible Efforts for you will make you Joy Constantly Im sure!!
+          my pasandida Aurat. I wish you were here with me but what can we do time is not
+          with us, but but my invincible Efforts for you will surely make you Joy Constantly !!
           <br />
           <span class="ullu">
             Forever Yours,
